--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -27,14 +27,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 108
         },
         "id": "weGsF80nJkMs",
-        "outputId": "cb6cf9e6-0922-451f-8f5b-5bf76cb4a51b"
+        "outputId": "074552c9-08fe-430c-f0c1-08235b218803"
       },
       "outputs": [
         {
@@ -45,9 +45,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-a6378c12-708c-4622-b494-f6a554d2dafb\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-00a1daa4-d3e2-4b18-8c9e-5b59cad134c5\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-a6378c12-708c-4622-b494-f6a554d2dafb\">\n",
+              "     <output id=\"result-00a1daa4-d3e2-4b18-8c9e-5b59cad134c5\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -304,7 +304,7 @@
       "metadata": {
         "id": "j0kdOLlUm-UD"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -316,7 +316,7 @@
       "metadata": {
         "id": "m5mQjx9UXqXU"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
       "metadata": {
         "id": "ipe3yiCzYRba"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "KXQr-iB5ZTGq"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -358,9 +358,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
-        "outputId": "9a908b6b-b70b-4c26-bad7-2b3bd3f911d2"
+        "outputId": "ef57dd85-4d3d-45a5-b9af-20b71735c00e"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-38c5079d-c20b-458a-80b7-766c20262bf9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-986a4a98-048c-42cf-b190-196c8c6d1475\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -469,7 +469,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-38c5079d-c20b-458a-80b7-766c20262bf9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-986a4a98-048c-42cf-b190-196c8c6d1475')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -521,12 +521,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-38c5079d-c20b-458a-80b7-766c20262bf9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-986a4a98-048c-42cf-b190-196c8c6d1475 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-38c5079d-c20b-458a-80b7-766c20262bf9');\n",
+              "        const element = document.querySelector('#df-986a4a98-048c-42cf-b190-196c8c6d1475');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -546,8 +546,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2012395b-a808-442f-9b75-cf8c3b0bbe2c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2012395b-a808-442f-9b75-cf8c3b0bbe2c')\"\n",
+              "<div id=\"df-6425f45f-1760-41be-9701-1041c4187f7c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6425f45f-1760-41be-9701-1041c4187f7c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -666,7 +666,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2012395b-a808-442f-9b75-cf8c3b0bbe2c button');\n",
+              "        document.querySelector('#df-6425f45f-1760-41be-9701-1041c4187f7c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -677,122 +677,69 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import nltk\n",
-        "from nltk.corpus import words\n",
-        "\n",
-        "nltk.download(\"words\")\n",
-        "nltk.download('punkt')"
+        "pip install  unidecode"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "gsrpiCeA-gxa",
-        "outputId": "8eb70a29-8448-43b4-f063-24ce2267a5d2"
+        "id": "_v_CyrXVMk3O",
+        "outputId": "c8dca532-ac31-461d-8ad2-cdd8a3e87716"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package words to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/words.zip.\n",
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Download the English words corpus\n",
-        "nltk.download(\"words\")\n",
-        "\n",
-        "# Create a function to check if a word is in the English vocabulary\n",
-        "english_vocab = set(w.lower() for w in words.words())\n",
-        "\n",
-        "def is_english_word(word):\n",
-        "    return word.lower() in english_vocab\n",
-        "\n",
-        "# Create a function to remove non-English words from a text\n",
-        "def remove_words_with_non_english_characters(text):\n",
-        "    if isinstance(text, str):\n",
-        "        words = text.split()  # Split the text into words for strings\n",
-        "        cleaned_words = []\n",
-        "        for word in words:\n",
-        "            if all(char.isalpha() and ord(char) < 128 for char in word):\n",
-        "                cleaned_words.append(word)\n",
-        "            else:\n",
-        "                cleaned_words.append(word)  # Retain symbols and punctuation\n",
-        "        cleaned_text = ' '.join(cleaned_words)\n",
-        "        return cleaned_text\n",
-        "    else:\n",
-        "        return text\n",
-        "\n",
-        "\n",
-        "new_data = data.copy()\n",
-        "new_data[\"title\"] = new_data[\"title\"].apply(remove_words_with_non_english_characters)\n",
-        "\n",
-        "# df[\"text\"] now contains text with non-English words removed, while other columns remain intact\n",
-        "print(new_data)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3tATmTKEAz9p",
-        "outputId": "6f367fdd-ddc8-4599-df2c-b8ba77b02c6e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package words to /root/nltk_data...\n",
-            "[nltk_data]   Package words is already up-to-date!\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                                                   title  labels\n",
-            "0      Gildan Activewear Reports Strong Results for t...       2\n",
-            "1      TRILLION ENERGY ANNOUNCES FLOW TEST RESULTS FO...       2\n",
-            "2                 CAPREIT Announces October Distribution       1\n",
-            "3      Unigold Inc Delivers Positive Feasibility Stud...       2\n",
-            "4      Wallbridge Provides Update on Archer Explorati...       1\n",
-            "...                                                  ...     ...\n",
-            "13705  Stocks making the biggest moves midday TD Amer...       1\n",
-            "13706  Stocks making the biggest moves premarket Fitb...       1\n",
-            "13707  Stocks making the biggest moves premarket Home...       1\n",
-            "13708  Stocks making the biggest moves premarket TD A...       1\n",
-            "13709           TCO NNVC GPOR and JE among midday movers       1\n",
-            "\n",
-            "[13710 rows x 2 columns]\n"
+            "Collecting unidecode\n",
+            "  Downloading Unidecode-1.3.7-py3-none-any.whl (235 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m235.5/235.5 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: unidecode\n",
+            "Successfully installed unidecode-1.3.7\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from unidecode import unidecode\n",
+        "import pandas as pd\n",
+        "\n",
+        "def remove_non_english(cell):\n",
+        "    if isinstance(cell, str):\n",
+        "        # Convert non-ASCII characters to their closest ASCII representation\n",
+        "        ascii_text = unidecode(cell)\n",
+        "\n",
+        "        # Filter out non-English words\n",
+        "        english_words = [word for word in ascii_text.split() if word.isalpha()]\n",
+        "\n",
+        "        # Join the filtered words back into a string\n",
+        "        cleaned_text = ' '.join(english_words)\n",
+        "\n",
+        "        return cleaned_text\n",
+        "    elif isinstance(cell, (float, int)):\n",
+        "        # Convert float or int to string\n",
+        "        return str(cell)\n",
+        "    else:\n",
+        "        return cell\n",
+        "\n",
+        "new_data = data.copy()\n",
+        "new_data[\"title\"] = new_data[\"title\"].apply(remove_non_english)"
+      ],
+      "metadata": {
+        "id": "NkZ5lNYvMb-N"
+      },
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -800,123 +747,27 @@
         "print(len(new_data))\n",
         "new_data.replace(\"\", float(\"NaN\"), inplace=True)\n",
         "cleaned_data = new_data.dropna()\n",
-        "cleaned_data.to_csv('cleaned_data.csv')\n"
+        "print(len(cleaned_data))\n",
+        "cleaned_data.to_csv('cleaned_data.csv')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "iM-2i_-wC27d",
-        "outputId": "ed924826-8deb-4fca-becf-bb0123256e9b"
+        "id": "waHoqA1UNNR5",
+        "outputId": "38f5fbb3-c5ef-495c-8572-7497fd918098"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "13710\n"
+            "13710\n",
+            "13690\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Lemmatization"
-      ],
-      "metadata": {
-        "id": "Wyx-7HoNshzn"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import nltk\n",
-        "from nltk.stem import WordNetLemmatizer\n",
-        "from nltk.tokenize import word_tokenize\n",
-        "nltk.download('punkt')\n",
-        "nltk.download('wordnet')"
-      ],
-      "metadata": {
-        "id": "QmQDVVKqsjlL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Thought process:\n",
-        "While lemmatization is considered computationally more expensive than stemming due to its reliance on a linguistic database, our team believes that lemmatization is superior because it yields complete English words, whereas stemming can result in incomplete or non-English words."
-      ],
-      "metadata": {
-        "id": "avMG3uWputJ3"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Import necessary libraries\n",
-        "from nltk.tokenize import word_tokenize\n",
-        "from nltk.stem import WordNetLemmatizer\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Create a WordNetLemmatizer object for lemmatization\n",
-        "lemmatizer = WordNetLemmatizer()\n",
-        "\n",
-        "def lemmatize_sentence(text):\n",
-        "    \"\"\"\n",
-        "    Lemmatizes a given text by tokenizing it into words,\n",
-        "    lemmatizing each word, and then rejoining them into a sentence.\n",
-        "\n",
-        "    Parameters:\n",
-        "    - text (str): The input text to be lemmatized.\n",
-        "\n",
-        "    Returns:\n",
-        "    - lemmatized_sentence (str): The lemmatized sentence.\n",
-        "    \"\"\"\n",
-        "    # Tokenize the sentence into words\n",
-        "    words = word_tokenize(text)\n",
-        "\n",
-        "    # Lemmatize each word and convert to lowercase\n",
-        "    lemmatized_words = [lemmatizer.lemmatize(word.lower()) for word in words]\n",
-        "\n",
-        "    # Join the lemmatized words back into a sentence\n",
-        "    lemmatized_sentence = ' '.join(lemmatized_words)\n",
-        "\n",
-        "    return lemmatized_sentence\n",
-        "\n",
-        "def lemmatize_dataset(sentences):\n",
-        "    \"\"\"\n",
-        "    Lemmatizes an entire dataset of sentences using the lemmatize_sentence function.\n",
-        "\n",
-        "    Parameters:\n",
-        "    - sentences (pd.Series): A Pandas Series containing the sentences to be lemmatized.\n",
-        "\n",
-        "    Returns:\n",
-        "    - lemmatized (list) : A list of lemmatized sentences.\n",
-        "    \"\"\"\n",
-        "    # Initialize an empty list to store lemmatized sentences\n",
-        "    lemmatized = []\n",
-        "\n",
-        "    # Iterate through each sentence in the dataset\n",
-        "    for sentence in sentences:\n",
-        "        # Lemmatize the current sentence and append to the list\n",
-        "        lemmatized.append(lemmatize_sentence(sentence))\n",
-        "\n",
-        "    return lemmatized\n",
-        "\n",
-        "# Lemmatize the 'title' column in the 'data' DataFrame\n",
-        "data[\"title\"] = pd.Series(lemmatize_dataset(data[\"title\"]))\n",
-        "\n",
-        "data.head()\n"
-      ],
-      "metadata": {
-        "id": "pV-AHxrktV5a"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
