filed all CNN model

--- a/CNN-LSTM-Attn/CNN_LSTM_Attn.ipynb
+++ b/CNN-LSTM-Attn/CNN_LSTM_Attn.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 308,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,107 +10,7 @@
         "id": "EI_IQ81m1PrW",
         "outputId": "f26b8d0b-2584-4f86-e469-ceda84b3cb11"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: datasets in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (2.10.1)\n",
-            "Requirement already satisfied: numpy>=1.17 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (1.20.3)\n",
-            "Requirement already satisfied: pyarrow>=6.0.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (13.0.0)\n",
-            "Requirement already satisfied: dill<0.3.7,>=0.3.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (0.3.6)\n",
-            "Requirement already satisfied: pandas in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (1.5.1)\n",
-            "Requirement already satisfied: requests>=2.19.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (2.28.1)\n",
-            "Requirement already satisfied: tqdm>=4.62.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (4.64.1)\n",
-            "Requirement already satisfied: xxhash in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (3.3.0)\n",
-            "Requirement already satisfied: multiprocess in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (0.70.14)\n",
-            "Requirement already satisfied: fsspec[http]>=2021.11.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (2023.4.0)\n",
-            "Requirement already satisfied: aiohttp in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (3.8.3)\n",
-            "Requirement already satisfied: huggingface-hub<1.0.0,>=0.2.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (0.10.1)\n",
-            "Requirement already satisfied: packaging in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (21.3)\n",
-            "Requirement already satisfied: responses<0.19 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (0.18.0)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets) (5.4.1)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets) (22.1.0)\n",
-            "Requirement already satisfied: charset-normalizer<3.0,>=2.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets) (2.0.4)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets) (6.0.2)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets) (4.0.2)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets) (1.8.1)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets) (1.3.3)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets) (1.2.0)\n",
-            "Requirement already satisfied: filelock in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from huggingface-hub<1.0.0,>=0.2.0->datasets) (3.7.1)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from huggingface-hub<1.0.0,>=0.2.0->datasets) (4.4.0)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from packaging->datasets) (3.0.9)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (3.4)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (1.26.12)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (2023.5.7)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from pandas->datasets) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from pandas->datasets) (2022.6)\n",
-            "Requirement already satisfied: six>=1.5 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n",
-            "\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-            "Requirement already satisfied: torch in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (1.12.1)\n",
-            "Requirement already satisfied: typing-extensions in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from torch) (4.4.0)\n",
-            "\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-            "Requirement already satisfied: transformers in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (4.20.1)\n",
-            "Requirement already satisfied: filelock in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (3.7.1)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.1.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (0.10.1)\n",
-            "Requirement already satisfied: numpy>=1.17 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (1.20.3)\n",
-            "Requirement already satisfied: packaging>=20.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (21.3)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (5.4.1)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (2022.10.31)\n",
-            "Requirement already satisfied: requests in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (2.28.1)\n",
-            "Requirement already satisfied: tokenizers!=0.11.3,<0.13,>=0.11.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (0.12.1)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from transformers) (4.64.1)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (4.4.0)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from packaging>=20.0->transformers) (3.0.9)\n",
-            "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests->transformers) (2.0.4)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests->transformers) (3.4)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests->transformers) (1.26.12)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests->transformers) (2023.5.7)\n",
-            "\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-            "Requirement already satisfied: evaluate in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (0.4.1)\n",
-            "Requirement already satisfied: datasets>=2.0.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (2.10.1)\n",
-            "Requirement already satisfied: numpy>=1.17 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (1.20.3)\n",
-            "Requirement already satisfied: dill in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (0.3.6)\n",
-            "Requirement already satisfied: pandas in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (1.5.1)\n",
-            "Requirement already satisfied: requests>=2.19.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (2.28.1)\n",
-            "Requirement already satisfied: tqdm>=4.62.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (4.64.1)\n",
-            "Requirement already satisfied: xxhash in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (3.3.0)\n",
-            "Requirement already satisfied: multiprocess in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (0.70.14)\n",
-            "Requirement already satisfied: fsspec[http]>=2021.05.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (2023.4.0)\n",
-            "Requirement already satisfied: huggingface-hub>=0.7.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (0.10.1)\n",
-            "Requirement already satisfied: packaging in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (21.3)\n",
-            "Requirement already satisfied: responses<0.19 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from evaluate) (0.18.0)\n",
-            "Requirement already satisfied: pyarrow>=6.0.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets>=2.0.0->evaluate) (13.0.0)\n",
-            "Requirement already satisfied: aiohttp in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets>=2.0.0->evaluate) (3.8.3)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from datasets>=2.0.0->evaluate) (5.4.1)\n",
-            "Requirement already satisfied: filelock in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from huggingface-hub>=0.7.0->evaluate) (3.7.1)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from huggingface-hub>=0.7.0->evaluate) (4.4.0)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from packaging->evaluate) (3.0.9)\n",
-            "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests>=2.19.0->evaluate) (2.0.4)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests>=2.19.0->evaluate) (3.4)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests>=2.19.0->evaluate) (1.26.12)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from requests>=2.19.0->evaluate) (2023.5.7)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from pandas->evaluate) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from pandas->evaluate) (2022.6)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (22.1.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (6.0.2)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (4.0.2)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.8.1)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.3.3)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.2.0)\n",
-            "Requirement already satisfied: six>=1.5 in /Users/maximyam/opt/anaconda3/envs/yourenvname/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas->evaluate) (1.16.0)\n",
-            "\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install datasets\n",
         "!pip install torch\n",
@@ -132,6 +32,14 @@
         "import torch.optim as optim\n",
         "from torchvision import datasets, transforms\n",
         "from torch.optim.lr_scheduler import StepLR"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# This was an attempt at utilising CNN LSTM Attn Model\n",
+        "# Eventually we decided to proceed with focusing on Stacking method on lightweight models due to the higher accuracy score and its lower resource intensiveness"
       ]
     },
     {
@@ -182,13 +90,6 @@
         "print(X_test.shape)\n",
         "print(X_val.shape)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
